// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackgroundImg /> should adopt a bgPosition prop 1`] = `
<styled.div
  bgPosition="bottom right"
  bgSize="cover"
  imgSrc="http://fillmurray.com/400/800"
/>
`;

exports[`<BackgroundImg /> should adopt a bgSize prop 1`] = `
<styled.div
  bgPosition="center center"
  bgSize="contain"
  imgSrc="http://fillmurray.com/400/800"
/>
`;

exports[`<BackgroundImg /> should render with an imgSrc prop 1`] = `
<styled.div
  bgPosition="center center"
  bgSize="cover"
  imgSrc="http://fillmurray.com/400/800"
/>
`;
